--- a/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/Views/Movies/Index.cshtml
@@ -1,8 +1,5 @@
 ﻿@model List<MvcMovie.Models.CryptonatorClass>
 
-@{
-    ViewData["Title"] = "btcprice";
-}
 
 <meta http-equiv="refresh" content="30"/>
 
@@ -11,26 +8,31 @@
 
     @for (int i = 0; i < Model.Count(); i++)
     {
-        @if (i == 0) 
-        { 
-        <h2>
-            CURRENT BITCOIN PRICE:
-            <mark>
+        @if (i == 0)
+        {
+            <h2>
+                <font size="25" face="Arial" color="black">CURRENT BITCOIN PRICE:</font>
+
                 @Html.DisplayFor(modelItem => Model[i].ticker.price)
-            </mark>
-        </h2>
+
+            </h2>
         }
 
         @if (i == 1)
         {
-        <h2>
-            CURRENT XRP PRICE:
-            <mark>
+            <h2>
+                <font size="30" face="Arial" color="black">CURRENT XRP PRICE:</font>
+
                 @Html.DisplayFor(modelItem => Model[i].ticker.price)
-            </mark>
-        </h2>
+
+            </h2>
         }
     }
-    <button style=" color:purple;border-radius:50px;" type="button" onclick="location.reload()">Use me to refresh the page</button>
-    <button style=" color:red;border-radius:500px;" type="button" onclick="alert('You pressed the button.')">Use me to see an alert</button>
+    <h2>
+        <font size="1" face="Arial" color="grey">Prices refresh every 30 seconds automatically</font>
+    </h2>
+
+
+    <button style=" color:black;border-radius:50px;" type="button" onclick="location.reload()">Use me to refresh the page</button>
+    <button style=" color:black;border-radius:500px;" type="button" onclick="alert('You pressed the button.')">Use me to see an alert</button>
 </div>
