--- a/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/Views/Movies/Index.cshtml
@@ -8,25 +8,14 @@
 
     @for (int i = 0; i < Model.Count(); i++)
     {
-        @if (i == 0)
-        {
             <h2>
-                <font size="25" face="Arial" color="black">CURRENT BITCOIN PRICE:</font>
+                <font size="25" face="Arial" color="black">
 
-                @Html.DisplayFor(modelItem => Model[i].ticker.price)
+                    @Html.DisplayFor(modelItem => Model[i].ticker.@base)
 
-            </h2>
-        }
-
-        @if (i == 1)
-        {
-            <h2>
-                <font size="30" face="Arial" color="black">CURRENT XRP PRICE:</font>
-
-                @Html.DisplayFor(modelItem => Model[i].ticker.price)
-
-            </h2>
-        }
+                    @Html.DisplayFor(modelItem => Model[i].ticker.price)
+                </font>
+            </h2>   
     }
     <h2>
         <font size="1" face="Arial" color="grey">Prices refresh every 30 seconds automatically</font>
