--- a/MvcMovie/Views/Home/Index.cshtml
+++ b/MvcMovie/Views/Home/Index.cshtml
@@ -5,5 +5,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Hello Angel</h1>
-    <p>Click Movies to view crypto prices.</p>
+    <p>Click Crypto Prices to view crypto prices.</p>
 </div>
