--- a/MvcMovie/Views/TimesTest/Index.cshtml
+++ b/MvcMovie/Views/TimesTest/Index.cshtml
@@ -4,5 +4,5 @@
 @{
     ViewData["Title"] = "Index";
 }
-<h2>My Movie List</h2>
-<p>Hello from our View Template!</p>
+<h2>My Hello World</h2>
+<p>Hello World</p>
