--- a/MvcMovie/Views/Crypto/XRPPrice.cshtml
+++ b/MvcMovie/Views/Crypto/XRPPrice.cshtml
@@ -5,7 +5,7 @@
 }
     <meta http-equiv="refresh" content="30" />
 
-<h1>Bitcoin Price</h1>
+<h1>Ripple's XRP Price</h1>
 
 <div class="text-center">
 
@@ -25,6 +25,7 @@
         <font size="1" face="Arial" color="grey">Price refreshes every 30 seconds</font>
     </h2>
 
-    <button class="align-baseline" color:black;border-radius:500px;" type="button" onclick="location.href = 'https://localhost:44316/Movies/'">Return to the previous page</button>
+    <button class="align-baseline" color:black;border-radius:500px;" type="button" onclick="location.href = 'https://localhost:44316/Crypto/'">Return to the previous page</button>
+
 </div>
 
