--- a/MvcMovie/Views/Home/Index.cshtml
+++ b/MvcMovie/Views/Home/Index.cshtml
@@ -3,7 +3,9 @@
 }
 
 
-<div class="text-center">
-    <h1 class="display-4">Hello Angel</h1>
-    <p>Click Crypto Prices to view crypto prices.</p>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Hello Angel</h1>
+        <p>Click Crypto Prices to view crypto prices.</p>
+
+        <button class="align-baseline" color:black;border-radius:500px;" type="button" onclick="location.href = 'https://localhost:44316/Crypto/'">Crypto page</button>
+    </div>
