--- a/MvcMovie/Views/Crypto/Index.cshtml
+++ b/MvcMovie/Views/Crypto/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model List<MvcMovie.Models.CryptonatorClass>
 
 
-<meta http-equiv="refresh" content="30"/>
-
-<div class="text-center">
-    <h1>CRYPTO CURRENCY</h1>
-
-    <button style=" color:black;border-radius:100px;" type="button" onclick="location.href = 'https://localhost:44316/Crypto/BTCPRICE'">BTC</button>
-    <button style=" color:black;border-radius:100px;" type="button" onclick="location.href = 'https://localhost:44316/Crypto/XRPPRICE'">XRP</button>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Cryptocurrency</h1>
+        <h2>Please choose a cryptocurrency:</h2>
+        <button class="align-baseline" color:black;border-radius:100px;" type="button" onclick="location.href = 'https://localhost:44316/Crypto/BTCPRICE'">Bitcoin</button>
+        <button class="align-baseline" color:black;border-radius:500px;" type="button" onclick="location.href = 'https://localhost:44316/Crypto/XRPPRICE'">XRP</button>
+        <p></p>
+        <button class="align-baseline" color:black;border-radius:500px;" type="button" onclick="location.href = 'https://localhost:44316'">Home</button>
+    </div>
