--- a/MvcMovie/Views/Home/Index.cshtml
+++ b/MvcMovie/Views/Home/Index.cshtml
@@ -4,8 +4,14 @@
 
 
     <div class="text-center">
-        <h1 class="display-4">Hello Angel</h1>
+        <h1 class="display-4">Hello User</h1>
+        <h2>Welcome to Angel's Website</h2>
+
         <p>Click Crypto Prices to view crypto prices.</p>
 
         <button class="align-baseline" color:black;border-radius:500px;" type="button" onclick="location.href = 'https://localhost:44316/Crypto/'">Crypto page</button>
+        <button class="align-baseline" color:black;border-radius:500px;" type="button" onclick="location.href = 'https://localhost:44316/Crypto/cars'">Car Dealership page</button>
+        <button class="align-baseline" color:black;border-radius:500px;" type="button" onclick="location.href = 'https://localhost:44316/TimesTest/'">Hello page</button>
+        <button class="align-baseline" color:black;border-radius:500px;" type="button" onclick="location.href = 'https://localhost:44316/TimesTest/Welcome'">Repeater page</button>
+        <marquee height=50px>Templum Inc</marquee>
     </div>
