--- a/MvcMovie/Views/TimesTest/Index.cshtml
+++ b/MvcMovie/Views/TimesTest/Index.cshtml
@@ -6,3 +6,5 @@
 }
 <h2>My Hello World</h2>
 <p>Hello World</p>
+
+<button class="align-baseline" color:black;border-radius:500px;" type="button" onclick="location.href = 'https://localhost:44316'">Return to home page</button>
