--- a/MvcMovie/Views/TimesTest/Welcome.cshtml
+++ b/MvcMovie/Views/TimesTest/Welcome.cshtml
@@ -23,3 +23,5 @@
     <li>@ViewData["Message"]</li>
     }
 </ul>
+
+<button class="align-baseline" color:black;border-radius:500px;" type="button" onclick="location.href = 'https://localhost:44316'">Return to home page</button>
